--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ansi-styles": "^6.2.1",
+    "antd": "^5.2.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "mdb-react-ui-kit": "^5.1.0",
     "pretty-format": "^29.3.1",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "emailjs-com": "^3.2.0"
+    "emailjs-com": "^3.2.0",
+    "source-map-loader": "^4.0.1"
   }
 }
